--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,1 @@
-git+https://github.com/clinicedc/edc-base@develop#egg=edc-base
-git+https://github.com/clinicedc/edc-metadata@develop#egg=edc-metadata
-git+https://github.com/clinicedc/edc-model-fields@develop#egg=edc-model-fields
+django
