--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,18 @@ language: python
 
 python:
 - 3.6
+- 3.7
+
+dist: xenial
+
+sudo: true
 
 services:
 - mysql
+
+addons:
+  apt_packages:
+     - libcups2-dev
 
 branches:
   only:
@@ -18,11 +27,11 @@ install:
 - pip install coveralls
 
 before_script:
-- flake8 edc_prn
-- mysql -e 'create database edc character set utf8;'
+  - flake8 edc_prn
+  - mysql -e 'create database edc character set utf8;'
 
-script:
-- coverage run --source=edc_prn manage.py test
+script: 
+  - coverage run --source=edc_prn manage.py test
 
 after_success:
-- coveralls
+  - coveralls
