--- a/requirements.tests.txt
+++ b/requirements.tests.txt
@@ -1,5 +1,52 @@
+django-audit-fields
+django-celery-beat
+django-celery-results
+django-collect-offline
+django-collect-offline-files
+django-crypto-fields
+django-revision
+mysqlclient
+edc-action-item
+edc-adverse-event
+edc-appointment
+edc-auth
+edc-consent
+edc-crf
+edc-dashboard
+edc-data-manager
+edc-device
+edc-export
+edc-facility
+edc-fieldsets
+edc-form-label
+edc-identifier
+edc-lab
+edc-lab-dashboard
+edc-list-data
+edc-locator
 edc-metadata
 edc-metadata-rules
-edc-test-utils
+edc-model-admin
+edc-navbar
+edc-notification
+edc-offstudy
+edc_pdutils
+edc-pharmacy
+edc-pharmacy-dashboard
+edc-prn
+edc-protocol
+edc-randomization
+edc-reference
 edc-registration
-django-crypto-fields
+edc-reportable
+edc-reports
+edc-review-dashboard
+edc-screening
+edc-search
+edc-sites
+edc-subject-dashboard
+edc-subject-model-wrappers
+edc-timepoint
+edc-utils
+edc-visit-schedule
+edc-visit-tracking
