--- a/tox.ini
+++ b/tox.ini
@@ -1,41 +1,43 @@
 [tox]
 envlist =
-    py{38,39}-dj{31,32,dev}-{mysql},
+    py{39}-dj{32,dev}-{mysql},
     lint
 
 [gh-actions]
 python =
-    3.8: py38, lint
-    3.9: py39
+    3.9: py39, lint
 
 [gh-actions:env]
 DJANGO =
-    3.1: dj31
-    3.2: dj32
+    3.2: dj32, lint
     dev: djdev
 
 [flake8]
 ignore = E226,E302,E41,F401,W503,W605
 max-complexity = 17
 max-line-length = 95
-exclude = __init__.py,edc_prn/migrations/*,edc_prn/tests/*
+exclude = __init__.py,edc_prn/migrations/*,.tox/*
 
 [testenv]
 deps =
-    -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/coverage.txt
     -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/tox.txt
+    -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/test_utils.txt
     -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/edc.txt
-    dj31: Django>=3.1,<3.2
+    -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/third_party_dev.txt
+;    -r https://raw.githubusercontent.com/clinicedc/edc/test/django-multisite-fix-branch/requirements.tests/edc.txt
+;    -r https://raw.githubusercontent.com/clinicedc/edc/test/django-multisite-fix-branch/requirements.tests/third_party_dev.txt
     dj32: Django>=3.2,<3.3
-    djdev: https://github.com/django/django/tarball/master
+    djdev: https://github.com/django/django/tarball/main
     mysql: -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/mysql.txt
 
 commands =
-    pip install -U pip
-    pip install -U git+https://github.com/clinicedc/edc-test-utils@develop
-    pip install -U git+https://github.com/erikvw/django-import-export@get_export_admin_action
+    pip --version
+    pip freeze
     mysql: coverage run -a runtests.py --database=mysql
     coverage report
+
+ignore_outcome =
+    djdev: True
 
 [testenv:lint]
 deps = -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/lint.txt
@@ -43,4 +45,3 @@ commands =
     isort --profile=black --check --diff edc_prn runtests.py setup.py --skip edc_prn/migrations/
     black --check --diff edc_prn runtests.py setup.py
     flake8 edc_prn
-
