--- a/tox.ini
+++ b/tox.ini
@@ -28,17 +28,17 @@ deps =
 ;    -r https://raw.githubusercontent.com/clinicedc/edc/test/django-multisite-fix-branch/requirements.tests/third_party_dev.txt
     dj32: Django>=3.2,<3.3
     djdev: https://github.com/django/django/tarball/main
-    mysql: -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/mysql.txt
+    -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/mysql.txt
 
 commands =
     pip --version
     pip freeze
-    mysql: coverage run -a runtests.py --database=mysql
+    coverage run -a runtests.py --database=mysql
     coverage report
 
 [testenv:lint]
 deps = -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/lint.txt
 commands =
-    isort --profile=black --check --diff edc_prn runtests.py setup.py --skip edc_prn/migrations/
-    black --check --diff edc_prn runtests.py setup.py
+    isort --profile=black --check --diff . --skip 'migrations' --skip '.tox'
+    black --check --diff . --exclude '^(.*\/)*\b(migrations)\b($|\/.*$)'
     flake8 edc_prn
