--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,3 +2,4 @@ include AUTHORS CHANGES LICENSE VERSION
 include MANIFEST.in
 include *.rst
 recursive-include edc_prn/templates *
+include */locale/*/LC_MESSAGES/*.mo
