update test/gh-actions settings

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,11 +12,12 @@ keywords = django Edc PRN forms, clinicedc, clinical trials
 classifiers=
     Environment :: Web Environment
     Framework :: Django
-    Framework :: Django :: 5.1
+    Framework :: Django :: 5.2
     Intended Audience :: Developers
     Intended Audience :: Science/Research
     Operating System :: OS Independent
     Programming Language :: Python :: 3.12
+    Programming Language :: Python :: 3.13
     License :: OSI Approved :: GNU General Public License v3 (GPLv3)
 
 [options]
